--- a/task_list/src/app/task-list/task-list.component.html
+++ b/task_list/src/app/task-list/task-list.component.html
@@ -35,8 +35,8 @@
       </tbody>
     </table>
     <div class="flex justify-end space-x-4 mt-5">
-      <button routerLink="/status" routerLinkActive="active" class="filter-button">Estado</button>
-      <button routerLink="/category" routerLinkActive="active" class="filter-button">Categoría</button>
+      <button routerLink="/status" routerLinkActive="active" class="filter-button-status">Estado</button>
+      <button routerLink="/category" routerLinkActive="active" class="filter-button-category">Categoría</button>
     </div>
   </div>
 
