--- a/task_list/src/app/category/category.component.html
+++ b/task_list/src/app/category/category.component.html
@@ -52,8 +52,8 @@
     </table>
 
     <div class="flex justify-end space-x-4 mt-5">
-      <button routerLink="/task-list" routerLinkActive="active" class="filter-button">Tarea</button>
-      <button routerLink="/status" routerLinkActive="active" class="filter-button">Estado</button>
+      <button routerLink="/task-list" routerLinkActive="active" class="filter-button-t">Tarea</button>
+      <button routerLink="/status" routerLinkActive="active" class="filter-button-e">Estado</button>
    
     </div>
     </div>
