--- a/task_list/src/app/status/status.component.css
+++ b/task_list/src/app/status/status.component.css
@@ -128,7 +128,7 @@ body {
   /* Estilos base para los botones */
 .delete-button,
 .update-button,
-.filter-button {
+.filter-button, .filter-button-t, .filter-button-e {
   padding: 6px 12px;
   border: none;
   border-radius: 4px;
@@ -141,6 +141,21 @@ body {
 /* Colores específicos de fondo para cada botón */
 .delete-button {
   background-color: #e3342f; /* Rojo */
+}
+.filter-button-t{
+  background-color: #FFBFA9 ;
+}
+
+.filter-button-t:hover{
+  background-color: #F27BBD; /* Azul */
+}
+.filter-button-e{
+  background-color: #A0C3D2
+  
+
+}
+.filter-button-e:hover {
+  background-color: #088395; /* Azul */
 }
 
 .update-button {
@@ -163,6 +178,7 @@ body {
 .filter-button:hover {
   background-color: #3490dc; /* Azul */
 }
+
 .modal-backdrop {
   position: fixed;
   top: 0;
