--- a/task_list/src/app/task-list/task-list.component.css
+++ b/task_list/src/app/task-list/task-list.component.css
@@ -137,7 +137,10 @@ body {
   /* Estilos base para los botones */
 .delete-button,
 .update-button,
-.filter-button {
+.filter-button,
+.filter-button-status,
+.filter-button-category
+{
   padding: 6px 12px;
   border: none;
   border-radius: 4px;
@@ -172,7 +175,20 @@ body {
 .filter-button:hover {
   background-color: #3490dc; /* Azul */
 }
+.filter-button-status{
+  background-color: #FFBFA9 ;
 
+}
+.filter-button-status:hover {
+  background-color: #F27BBD; /* Azul */
+}
+.filter-button-category{
+  background-color: #A0C3D2
+  
+}
+.filter-button-category:hover {
+  background-color: #088395; /* Azul */
+}
 
 .new-work-panel {
   position: fixed;
